@@ -9,3 +9,10 @@ source /etc/profile.d/gradle.sh
 gradle run --args="read_text_file 'English for Career Development' /home/eugene/Documents/English_for_Career_Development set_battr NOTE_692302932 attr1 save_storage /home/eugene/Documents/text.json statistics"
     
 
+gradle clean fatJar
+
+cd build/libs/
+
+java -jar -Xmx512M --illegal-access=warn checklist_bot-all-1.0.jar
+
+WARNING: Illegal reflective access by com.google.inject.internal.cglib.core.$ReflectUtils$1 (file:/home/eugene/Projects/checklist_bot/core/build/libs/checklist_bot-all-1.0.jar) to method java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int,java.security.ProtectionDomain)
